NetworkService: Fix case when HTTP error page is sniffed as a download.

There were two bugs:  When plugins weren't synchronously available, the
download checking code was different from when they were.

Also, when a download has an HTTP error status code, the navigation was
being aborted instead of passing along the error to the renderer to
display an error page.

Bug: 870475
Cq-Include-Trybots: luci.chromium.try:linux_mojo
Change-Id: Ie113fab576b4cc8ea2ca444c261335bf183c60e2
Reviewed-on: https://chromium-review.googlesource.com/1161479
Commit-Queue: Matt Menke <mmenke@chromium.org>
Reviewed-by: Camille Lamy <clamy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580552}
Former-commit-id: 2bd72d862ddfbd4bb4ceed3f9b06b52e0911f16e